2020-12-28  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Handle --enable-pvm-profiling.
	* libpoke/pvm.c (pvm_print_profile): New function.
	(pvm_reset_profile): Likewise.
	* libpoke/libpoke.c (pk_print_profile): Likewise.
	(pk_reset_profile): Likewise.
	* poke/pk-cmd-vm.c (vm_profile_cmds): Define.
	(vm_profile_cmd): Likewise.
	(vm_cmds): Add vm_profile_cmd.
	(vm_profile_show_cmd): Define.
	(vm_profile_reset_cmd): Likewise.
	(pk_cmd_vm_profile_show): New function.
	(pk_cmd_vm_profile_reset): Likewise.
	* poke/pk-cmd.c (pk_cmd_init): Initialize vm_disas_trie.
	(pk_cmd_shutdown): Dispose of vm_profile_trie.

2020-12-25  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Struct Attributes): New section.

2020-12-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (offset_printer): Fix printing unnammed
	units.
	* testsuite/poke.pkl/printf-27.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2020-12-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-anal.c (pkl_anal1_ps_decl): Clarify error message.
	* testsuite/poke.pkl/struct-method-diag-6.pk: Adapt.

2020-12-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-promo.c (promote_node): New function.
	(pkl_promo_ps_op_div): Use promote_node.
	(pkl_promo_ps_op_binary_intoffstrarr): Likewise.
	(pkl_promo_ps_op_bconc): Likewise.
	(pkl_promo_ps_op_mul): Likewise.
	(pkl_promo_ps_return_stmt): Likewise.
	(pkl_promo_ps_func_arg): Likewise.
	(pkl_promo_ps_print_stmt): Likewise.
	(pkl_promo_ps_funcall): Likewise.
	(pkl_promo_ps_op_binary): Likewise.
	(pkl_promo_ps_ass_stmt): Likewise.
	(pkl_promo_ps_struct_type_field): Likewise.
	(pkl_promo_ps_op_in): Likewise.

2020-12-22  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (initialize): Define poke_interactive_p in the compiler.
	* libpoke/pkl.c (pvm_type_to_ast_type): Fix integral types.
	* etc/poke.rec (Make poke_interactive_p available to Poke
	programs): Remove as done.

2020-12-22  Jose E. Marchesi  <jemarch@gnu.org>
